# my_own_marketplace

./: .gitignore  README.md  pyproject.toml
mock_marketplace/: .env  alembic.ini  config.py  main.py
mock_marketplace/alembic/: env.py
mock_marketplace/alembic/versions/: 12-09-2024_5848c1d0bb76_created_table_products.py  31-10-2024_93a326d71224_create_tables.py  5-10-2024_53668534a283_update_product_table.py  e825752a61c3_create_table_user.py
mock_marketplace/src/: __init__.py  admin_routers.py
mock_marketplace/src/admin/: admin_comands.py
mock_marketplace/src/auth/: auth.py  database.py  manager.py  schemas.py
mock_marketplace/src/frontend/: package-lock.json  package.json
mock_marketplace/src/frontend/frontend-mock-marketplace/: package-lock.json  package.json
mock_marketplace/src/frontend/frontend-mock-marketplace/src/: App.jsx
mock_marketplace/src/frontend/frontend-mock-marketplace/src/components/: Card.jsx  HomePage.jsx
mock_marketplace/src/frontend/src/: App.jsx
mock_marketplace/src/frontend/src/components/: Card.jsx  HomePage.jsx  StuffCard.jsx
mock_marketplace/src/frontend/template/: cart.html  home_page.html  purchasing.html  stuff_page.html
mock_marketplace/src/posts/: database.py  models.py  orm.py
mock_marketplace/src/routers/: admin_routers.py  frontend\public\images\demofile.txt  routers_cart_purchasing.py  routers_for_images.py  routers_for_wears.py  routers_home_stuff_page.py
